[project]
name = "rlink-bot"
version = "0.1.0"
description = "Minimal relay client for Rlink third-party bots (E2E + WebSocket)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
  "websocket-client>=1.7.0",
]

[project.scripts]
rlink-bot = "rlink_bot.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rlink_bot"]
